syntax = "proto3";
import "google/protobuf/empty.proto";

package harpo.network.p2p;

option java_multiple_files = true;

service KademliaLogService {
  rpc Log (CreateLog) returns (ResponseLog) {}
}

service KademliaService {
  rpc getNodeBy (Contact) returns (Node) {}
  rpc ping (Node) returns (Answer){}
  rpc findClosest(Node) returns (Closest){}
}

message Closest {
  repeated Node nodes = 1;
}

message Node {
  string id = 1;
  int32 distance = 2;
  int64 lastSeen = 3;
  Contact contact = 4;
}

message Contact {
  string ip = 1;
  int32 port = 2;
}

message Answer {
  bool isAlive = 1;
}

message CreateLog {
  string value = 1;
}

message ResponseLog {
  string response = 1;
}

